--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>hello-world</title>
   </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
+  <body style='background-color: #fff'>
+   
+    <div id="app" ></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
